# botirage

./: .gitignore  Cargo.toml  flake.nix
.github/workflows/: build.yaml
.hydra/: specs.json
src/: commands.rs  emoji_games.rs  loto.rs  main.rs  state.rs  utils.rs
