[package]
name = "botirage"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
pretty_env_logger = "0.5.0"
serde = "1.0.210"
teloxide = { version = "0.13.0", features = ["macros", "sqlite-storage-rustls", "throttle"] }
tokio = { version = "1.39.0", features = ["rt-multi-thread", "macros"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
